CaseStudy1-SecureWebAppDeploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-eComSite-service
spec:
  selector:
    app: hello-eComSite
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 8080
  type: LoadBalancer  # This exposes the service to a public IP
