CaseStudy1-SecureWebAppDeploy/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-eComSite-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
  - host: hello-eComSite.yourdomain.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-eComSite-service
            port:
              number: 80
  tls:
  - hosts:
    - hello-eComSite.yourdomain.com
    secretName: hello-eComSite-tls
